--- a/_posts/2024-5-25-Welcome.md
+++ b/_posts/2024-5-25-Welcome.md
@@ -7,11 +7,11 @@ title: Welcome to my site! (And a little about myself)
 
 Thanks for checking out my page.
 
-I'm a 14 jear old developer. I make everything from gadgets to games. Here I make posts about my coding journies.
+I'm a 14 jear old developer. I make everything from gadgets to games. Here I make posts about my coding projects.
 
 My current coding skills:
 
 - Python
 - Unity
-- [Hikari](https://www.hikari-py.dev/ Python API for Discord bots)
+- [Hikari](https://www.hikari-py.dev/ "Python API for Discord bots")
 - This website made with [Jekyll](https://jekyllrb.com/)
