--- a/_posts/2024-5-25-Welcome.md
+++ b/_posts/2024-5-25-Welcome.md
@@ -7,7 +7,7 @@ title: Welcome to my site! (And a little about myself)
 
 Thanks for checking out my page.
 
-I'm a 14 jear old developer. I make everything from gadgets to games. Here I make posts about my coding projects.
+I'm a 14 year old developer. I make everything from gadgets to games. Here I make posts about my coding projects.
 
 My current coding skills:
 
