--- a/_posts/2024-5-25-Welcome.md
+++ b/_posts/2024-5-25-Welcome.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Welcome to my site! (And a little about myself)
+tags:  [Introduction]
 ---
 
 # Welcome to **nacho.cool**! 😊
